# OpenEnv-Customer-Support

./: .dockerignore  .gitignore  Blog.md  Dockerfile  README.md  evaluate.py  feature.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train.py  train_notebook.ipynb
.github/workflows/: ci-smoke.yml
demo/: architecture_diagram.md  hf_mini_blog.md  incident_resolution_walkthrough.md  pitch_script_3min.md  video_script_2min.md
demo/results/: baseline_report.json  trained_report.json
env/: __init__.py  billing.py  crm.py  customers.py  environment.py  errors.py  incident_history.py  knowledge_base.py  policy_engine.py  runbooks.py  services.py  stakeholders.py  state.py  world.py
graders/: __init__.py  grader.py  investigation_grader.py  openenv_rubrics.py
models/: __init__.py  action.py  incident.py  observation.py  step_result.py  ticket.py
results/sandbox/: baseline_report.json  trained_report.json
results/simple/: baseline_report.json  trained_report.json
results/training/: reward_history.json
sandbox/: Local_Testing_Guide.md  README.md  __init__.py  docker-compose.yml  launch_no_docker.py  smoke_test.py
sandbox/chaos/: Dockerfile  controller.py  failure_modes.py
sandbox/env_adapter/: __init__.py  bridge.py  drill.py  sandbox_env.py
sandbox/monitoring/: prometheus.yml
sandbox/services/analytics/: Dockerfile  app.py
sandbox/services/auth/: Dockerfile  app.py
sandbox/services/database/: Dockerfile  app.py
server/: app.py
tasks/: __init__.py  history_incidents.json  incident_bank.py  runbooks.json  ticket_bank.py
tasks/incidents/: easy.json  hard.json  medium.json  nightmare.json
tasks/tickets/: easy.json  hard.json  medium.json
tests/: conftest.py  test_backward_compat.py  test_billing.py  test_cascading.py  test_crm.py  test_customers.py  test_env.py  test_grader.py  test_incident_episode.py  test_incident_history.py  test_incidents.py  test_inference.py  test_investigation_grader.py  test_knowledge_base.py  test_new_actions.py  test_openenv_rubrics.py  test_policy_drift.py  test_runbooks.py  test_sandbox_env.py  test_server_api.py  test_services.py  test_stakeholders.py  test_trajectories.py  test_world_state.py
(+5 files in other folders)
