[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openenv-customer-support"
version = "0.1.0"
description = "OpenEnv async environment for customer support triage and resolution"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["env", "models", "tasks", "graders"]
