[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openenv-customer-support"
version = "0.1.0"
description = "OpenEnv async environment for customer support triage and resolution"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "openai>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["env", "models", "tasks", "graders", "server"]
