[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openenv-enterprise-incident-command-center"
version = "2.0.0"
description = "OpenEnv enterprise incident command center with deterministic world modeling"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "openai>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Repository = "https://github.com/anujkamaljain/OpenEnv-Customer-Support"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["env", "models", "tasks", "graders", "server"]
